Fix findbugs violations in southbound-impl
- Method invokes inefficient Number constructor; use static valueOf instead
- Inefficient use of keySet iterator instead of entrySet iterator
- Reliance on default encoding
- Method ignores exceptional return value
- Should be a static inner class
- Private method is never called
- Method invokes inefficient Number constructor; use static valueOf instead
- Return value of method without side effect is ignored
- Result of integer multiplication cast to long
- Dead store to local variable
- Write to static field from instance method
- Parameter must be non-null but is marked as nullable
- Redundant nullcheck of value known to be non-null

Change-Id: Ieba8b20d01a47d6b245bb2752f004aa18fd08469
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>